{
    "name": "PlayerInput",
    "maps": [
        {
            "name": "Playing",
            "id": "506baf38-b80f-4b35-ae87-1718cee06b20",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "81871a7b-78c1-490e-abce-092153b4a456",
                    "expectedControlType": "Vector2",
                    "processors": "NormalizeVector2",
                    "interactions": ""
                },
                {
                    "name": "BasicAttack",
                    "type": "Button",
                    "id": "28e8c03e-c195-49ae-b39b-c5737f0b8bce",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Camera",
                    "type": "Value",
                    "id": "29bf7a56-0969-463f-9a97-6badd7d147aa",
                    "expectedControlType": "Vector3",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Debug1",
                    "type": "Button",
                    "id": "cc671426-0e84-4963-876f-cde443b45758",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Debug2",
                    "type": "Button",
                    "id": "17b9fb4a-0623-48d6-990c-acc0e12c5da4",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "BombSpecial",
                    "type": "Button",
                    "id": "b39ca73d-74e2-4f16-a11d-451c9c2ac15d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "39f205b8-2cb5-46b4-b516-19bc90ba9b51",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BasicAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "WASD",
                    "id": "f1f7f008-1fb5-42c3-9eeb-7d97a962295b",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c05aa7f4-2090-4dd3-8ffe-79425962ba54",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "6f965de7-6527-4544-81e5-580bf731058a",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5c12df1e-41aa-4b74-b070-4d85aa44ebf7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "89215fc6-8ee0-4981-a10c-2a58f38ee5bc",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "b224e56e-7235-4b92-bbe3-42cf9648e1d1",
                    "path": "<Keyboard>/0",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b649e0d7-f9d0-4cf8-9476-d0c038636177",
                    "path": "<Keyboard>/9",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Debug2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee31a24d-04d1-4b3a-be8f-37597249ba04",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "BombSpecial",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}